[gd_scene load_steps=14 format=3 uid="uid://bbqx6246oiiif"]

[ext_resource type="Script" path="res://level_editor_ui.gd" id="1_0fbet"]
[ext_resource type="Texture2D" uid="uid://bbub0shsuundb" path="res://sprites/upload.png" id="2_qtu10"]
[ext_resource type="Texture2D" uid="uid://1h8rwbtku2y1" path="res://image.png" id="3_fj5cn"]
[ext_resource type="Texture2D" uid="uid://dxmsk6vqre2vk" path="res://uploadd.png" id="4_iy58a"]
[ext_resource type="Texture2D" uid="uid://gleoucsicnkk" path="res://redflag.png" id="5_6a6wx"]
[ext_resource type="Texture2D" uid="uid://c3cpln3kxqrmi" path="res://music.png" id="5_iy58a"]
[ext_resource type="Texture2D" uid="uid://dgtgch506aa24" path="res://checkeredflag.png" id="6_sky72"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uchyk"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.7058824, 0.89411765, 0.9764706, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_uchyk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62e2m"]
bg_color = Color(0.7058824, 0.89411765, 0.9764706, 1)

[sub_resource type="Theme" id="Theme_0fbet"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtu10"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fbet"]
bg_color = Color(0.7058824, 0.89411765, 0.9764706, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 9.75
script = ExtResource("1_0fbet")

[node name="rootframe" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.001
offset_right = 118.0
offset_bottom = 0.27996826
theme_override_styles/panel = SubResource("StyleBoxFlat_uchyk")

[node name="MarginContainer" type="MarginContainer" parent="rootframe"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.001
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.282
offset_top = 2.0
offset_right = 3.0
offset_bottom = 1.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="mainVbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.093
anchor_bottom = 1.0
offset_right = 17.863892
offset_bottom = 3.0
theme = SubResource("Theme_uchyk")
theme_override_constants/separation = 82

[node name="topbar" type="PanelContainer" parent="mainVbox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_62e2m")

[node name="topbarhbox" type="HBoxContainer" parent="mainVbox/topbar"]
layout_mode = 2
theme_override_constants/separation = 107

[node name="backbtn" type="Button" parent="mainVbox/topbar/topbarhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
toggle_mode = true
text = "↰"
flat = true

[node name="sprite" type="Button" parent="mainVbox/topbar/topbarhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.021434713, 0.021434603, 0.02143463, 1)
theme_override_font_sizes/font_size = 26
text = "Sprite"
flat = true

[node name="blocks" type="Button" parent="mainVbox/topbar/topbarhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.014275268, 0.014275197, 0.014275214, 1)
theme_override_font_sizes/font_size = 23
text = "Blocks"
flat = true

[node name="platforms" type="Button" parent="mainVbox/topbar/topbarhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.003519184, 0.00351916, 0.0035191686, 1)
theme_override_font_sizes/font_size = 23
text = "Platforms"
flat = true

[node name="items" type="Button" parent="mainVbox/topbar/topbarhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.00069390074, 0.0006938965, 0.0006938975, 1)
theme_override_font_sizes/font_size = 23
text = "Items"
flat = true

[node name="enemies" type="Button" parent="mainVbox/topbar/topbarhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0056611756, 0.0056611407, 0.005661149, 1)
theme_override_font_sizes/font_size = 23
text = "Enemy"
flat = true

[node name="save" type="Button" parent="mainVbox/topbar/topbarhbox"]
layout_mode = 2
theme = SubResource("Theme_0fbet")
theme_override_colors/font_color = Color(0.042044476, 0.1135431, 1.0798126, 1)
theme_override_font_sizes/font_size = 23
text = "Save"
flat = true

[node name="selectorbar" type="PanelContainer" parent="mainVbox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qtu10")

[node name="selectorScroll" type="ScrollContainer" parent="mainVbox/selectorbar"]
layout_mode = 2

[node name="selectList" type="HBoxContainer" parent="mainVbox/selectorbar/selectorScroll"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 13

[node name="HSplitContainer" type="HSplitContainer" parent="mainVbox"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="toolpanel" type="VBoxContainer" parent="mainVbox/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 41

[node name="imageRow" type="HBoxContainer" parent="mainVbox/HSplitContainer/toolpanel"]
layout_mode = 2

[node name="imagebtn" type="Button" parent="mainVbox/HSplitContainer/toolpanel/imageRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.06666667, 0.06666667, 0.06666667, 1)
theme_override_font_sizes/font_size = 22
theme_override_icons/icon = ExtResource("2_qtu10")
icon = ExtResource("3_fj5cn")
flat = true

[node name="imageoptions" type="HBoxContainer" parent="mainVbox/HSplitContainer/toolpanel/imageRow"]
layout_mode = 2

[node name="uploadBtn" type="TextureButton" parent="mainVbox/HSplitContainer/toolpanel/imageRow/imageoptions"]
layout_mode = 2
texture_normal = ExtResource("4_iy58a")

[node name="musicRow" type="HBoxContainer" parent="mainVbox/HSplitContainer/toolpanel"]
layout_mode = 2

[node name="musicbtn" type="Button" parent="mainVbox/HSplitContainer/toolpanel/musicRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
icon = ExtResource("5_iy58a")
flat = true

[node name="musicoptions" type="HBoxContainer" parent="mainVbox/HSplitContainer/toolpanel/musicRow"]
layout_mode = 2

[node name="song1" type="TextureButton" parent="mainVbox/HSplitContainer/toolpanel/musicRow/musicoptions"]
layout_mode = 2
texture_normal = ExtResource("4_iy58a")

[node name="redflag" type="Button" parent="mainVbox/HSplitContainer/toolpanel"]
layout_mode = 2
icon = ExtResource("5_6a6wx")
flat = true

[node name="finishbtn" type="Button" parent="mainVbox/HSplitContainer/toolpanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.004536462, 0.004536442, 0.0045364466, 1)
icon = ExtResource("6_sky72")
flat = true

[node name="workspace" type="VBoxContainer" parent="mainVbox/HSplitContainer"]
layout_mode = 2

[node name="SpriteLayer" type="Node2D" parent="mainVbox/HSplitContainer/workspace"]

[node name="bottombar" type="PanelContainer" parent="mainVbox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0fbet")

[node name="bottomhbox" type="HBoxContainer" parent="mainVbox/bottombar"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 135
alignment = 1

[node name="undo" type="Button" parent="mainVbox/bottombar/bottomhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0056611756, 0.0056611407, 0.005661149, 1)
theme_override_font_sizes/font_size = 23
text = "← Undo"
flat = true

[node name="load" type="Button" parent="mainVbox/bottombar/bottomhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0056611756, 0.0056611407, 0.005661149, 1)
theme_override_font_sizes/font_size = 23
text = "Load"
flat = true

[node name="try it" type="Button" parent="mainVbox/bottombar/bottomhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "▲ Try It!"
flat = true

[node name="help" type="Button" parent="mainVbox/bottombar/bottomhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.000113828486, 0.000113827875, 0.000113828006, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Help?"
flat = true

[node name="clear" type="Button" parent="mainVbox/bottombar/bottomhbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.06053055, 0.060530275, 0.060530335, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "↓ Clear All"
flat = true

[node name="imagedialog" type="FileDialog" parent="."]

[node name="musicdialog" type="FileDialog" parent="."]

[connection signal="pressed" from="mainVbox/topbar/topbarhbox/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="mainVbox/bottombar/bottomhbox/load" to="." method="_on_load_pressed"]
